Some more FindBugs improvements
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/net/branches/JDK_1_5_BRANCH@489067 13f79535-47bb-0310-9956-ffa450edef68